# pforth

./: .gitignore  CMakeLists.txt  PF_README.md  README.md  RELEASES.md  make-release.sh
.github/workflows/: cmake.yml  make.yml  make32.yml
csrc/: CMakeLists.txt  ex_c_stuff.c  ex_c_stuff.h  ex_cglue.c  ex_cglue.h  ex_core.c  ex_core.h  ex_guts.h  ex_include_dirs.c  ex_include_dirs.h  ex_inner.c  ex_io.c  ex_io.h  ex_save.c  ex_save.h  excompil.c  excompil.h  excustom.c  exinnrfp.h  pf_all.h  pf_io.c  pfinnrfp.h  sources.cmake
doc/: changes.md  index.md  words.md
example/: bindings.fth  build.sh  test.fth  test2.fth  test3.fth  testlib.c  testlib.h
example/inner/: 1.fth  2.fth
fth/: ex_ansilocs.fth  ex_clib.fth  ex_facility.fth  ex_file.fth  ex_floats.fth  ex_misc2.fth  ex_os.fth  ex_parse.fth  ex_shell.fth  ex_slashqt.fth  ex_smart_if.fth  ex_strings.fth  ex_structure.fth  ex_system.fth  ex_tools.fth  loadex4th.fth  misc1.fth  mkdicdat.fth  system.fth  t_corex.fth
fth/ex_local_share/: random.fs
html/: index.html  style.css
